test/modules/deitz/test_module_access2.chpl
module OuterModule {
  module N {
    var x = 1;
  }

  module M {
    use super.N;
    var y = 2;
  }

  use this.M;

  writeln((M.x, M.y));
}
